--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "kfoobar/laravel-uuid",
     "description": "Eloquent UUID trait for Laravel",
+    "type": "plugin",
     "license": "MIT",
     "authors": [
         {
@@ -9,13 +10,15 @@
         }
     ],
     "minimum-stability": "dev",
+    "prefer-stable": true,
     "require": {
-        "php": ">=7.3",
-        "illuminate/support": "^5.5|^6|^7|^8|^9"
+        "php": "^7.3|^8.0",
+        "illuminate/database": ">=5.5",
+        "illuminate/support": ">=5.5"
     },
     "autoload": {
         "psr-4": {
-            "KFoobar\\LaravelUuid\\": "src/KFoobar/LaravelUuid/"
+            "KFoobar\\Uuid\\": "src/"
         }
     }
 }
