--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "kfoobar/laravel-uuid",
-    "description": "Eloquent UUID trait for Laravel",
-    "type": "plugin",
+    "description": "UUID Trait for Eloquent Models in Laravel",
+    "type": "library",
     "license": "MIT",
     "authors": [
         {
@@ -9,16 +9,29 @@
             "email": "david@kfoobar.se"
         }
     ],
-    "minimum-stability": "dev",
-    "prefer-stable": true,
     "require": {
         "php": "^7.3|^8.0",
-        "illuminate/database": ">=5.5",
-        "illuminate/support": ">=5.5"
+        "ext-json": "*",
+        "illuminate/database": "^5.5|^6.0|^7.0|^8.0|^9.0|^10.0",
+        "illuminate/support": "^5.5|^6.0|^7.0|^8.0|^9.0|^10.0"
     },
+    "require-dev": {
+        "orchestra/testbench": "^8.11",
+        "phpunit/phpunit": "^10.1"
+    },
+    "minimum-stability": "stable",
+    "prefer-stable": true,
     "autoload": {
         "psr-4": {
             "KFoobar\\Uuid\\": "src/"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "KFoobar\\Uuid\\Test\\": "tests/"
+        }
+    },
+    "scripts": {
+        "test": "vendor/bin/phpunit"
     }
 }
